--- a/test/websocket.html
+++ b/test/websocket.html
@@ -26,10 +26,103 @@
         }
 
         /* Red for deleted */
+        .connection-status {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        .connected {
+            background-color: #dff0d8;
+        }
+
+        .disconnected {
+            background-color: #f2dede;
+        }
+
+        .connecting {
+            background-color: #fcf8e3;
+        }
+
+        /* Product list styling */
+        .product-list {
+            margin: 20px 0;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .product-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            margin: 5px 0;
+            background-color: #f8f9fa;
+            border-radius: 3px;
+        }
+
+        .delete-btn {
+            background-color: #dc3545;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+
+        .delete-btn:hover {
+            background-color: #c82333;
+        }
+
+        .refresh-btn {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 3px;
+            cursor: pointer;
+            margin-bottom: 10px;
+        }
+
+        .refresh-btn:hover {
+            background-color: #0056b3;
+        }
+
+        .product-item {
+            display: grid;
+            grid-template-columns: auto 1fr auto;
+            gap: 10px;
+            align-items: center;
+        }
+
+        .batch-results {
+            margin: 20px 0;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        .batch-summary {
+            background-color: #f8f9fa;
+            padding: 10px;
+            border-radius: 3px;
+        }
+
+        .error {
+            color: #dc3545;
+            margin: 5px 0;
+        }
     </style>
 </head>
 
 <body>
+    <div id="connection-status" class="connection-status disconnected">
+        Disconnected
+    </div>
+
     <h1>Product API Test</h1>
 
     <div>
@@ -38,28 +131,98 @@
     </div>
 
     <div>
+        <h2>Product List</h2>
+        <button class="refresh-btn" onclick="refreshProducts()">Refresh Products</button>
+        <div id="product-list" class="product-list">
+            Loading products...
+        </div>
+    </div>
+
+    <div>
         <h2>WebSocket Events</h2>
         <div id="events"></div>
     </div>
 
+    <div>
+        <h2>Batch Operations</h2>
+        <button onclick="batchCreateProducts(5)">Create 5 Products</button>
+        <button onclick="batchDeleteSelected()">Delete Selected</button>
+        <div id="batch-results" class="batch-results"></div>
+    </div>
+
     <script>
-        // Initialize WebSocket connection
-        const ws = new WebSocket('ws://localhost:8080/ws');
+        const MAX_RETRIES = 5;
+        const RETRY_DELAY_MS = 2000;
+        let retryCount = 0;
+        let ws = null;
         let eventDiv = document.getElementById('events');
+        let statusDiv = document.getElementById('connection-status');
 
-        // Handle incoming WebSocket messages
-        ws.onmessage = function (event) {
-            const data = JSON.parse(event.data);
-            const div = document.createElement('div');
-            div.className = `event ${data.data.action}`;
-            div.innerHTML = `
-                <strong>${data.type}</strong><br>
-                ${JSON.stringify(data.data, null, 2)}
-            `;
-            eventDiv.prepend(div);
-        };
+        function updateConnectionStatus(status) {
+            statusDiv.className = `connection-status ${status}`;
+            statusDiv.textContent = status.charAt(0).toUpperCase() + status.slice(1);
+        }
 
-        // Function to create a test product
+        function connectWebSocket() {
+            if (ws) {
+                ws.close();
+            }
+
+            updateConnectionStatus('connecting');
+            ws = new WebSocket('ws://localhost:8080/ws');
+
+            ws.onopen = function () {
+                console.log('WebSocket connected');
+                updateConnectionStatus('connected');
+                retryCount = 0; // Reset retry counter on successful connection
+            };
+
+            ws.onmessage = function (event) {
+                const data = JSON.parse(event.data);
+                const div = document.createElement('div');
+                div.className = `event ${data.data.action}`;
+                div.innerHTML = `
+                    <strong>${data.type}</strong><br>
+                    ${JSON.stringify(data.data, null, 2)}
+                `;
+                eventDiv.prepend(div);
+
+                // Refresh product list when products are modified
+                refreshProducts();
+            };
+
+            ws.onclose = function (event) {
+                console.log('WebSocket disconnected:', event.code, event.reason);
+                updateConnectionStatus('disconnected');
+
+                if (retryCount < MAX_RETRIES) {
+                    retryCount++;
+                    const delay = RETRY_DELAY_MS * Math.pow(2, retryCount - 1); // Exponential backoff
+                    console.log(`Retrying connection in ${delay}ms (attempt ${retryCount}/${MAX_RETRIES})`);
+                    setTimeout(connectWebSocket, delay);
+                } else {
+                    console.error('Max retry attempts reached');
+                    updateConnectionStatus('disconnected (max retries reached)');
+                }
+            };
+
+            ws.onerror = function (error) {
+                console.error('WebSocket error:', error);
+            };
+        }
+
+        // Initial connection
+        connectWebSocket();
+
+        // Reconnect on visibility change (when tab becomes visible again)
+        document.addEventListener('visibilitychange', function () {
+            if (document.visibilityState === 'visible' &&
+                (ws === null || ws.readyState === WebSocket.CLOSED)) {
+                retryCount = 0; // Reset retry counter
+                connectWebSocket();
+            }
+        });
+
         function createProduct() {
             const product = {
                 "sku": "TEST-" + Math.random().toString(36).substring(7),
@@ -80,7 +243,6 @@
                 ]
             };
 
-            // Send POST request to create product
             fetch('http://localhost:8080/products', {
                 method: 'POST',
                 headers: {
@@ -91,6 +253,170 @@
                 .then(response => response.json())
                 .then(data => console.log('Created product:', data))
                 .catch(error => console.error('Error:', error));
+        }
+
+        // Add product management functions
+        function refreshProducts() {
+            fetch('http://localhost:8080/products')
+                .then(response => response.json())
+                .then(products => {
+                    const productList = document.getElementById('product-list');
+
+                    // Get 5 random products if there are more than 5
+                    let displayProducts = products;
+                    if (products.length > 5) {
+                        displayProducts = shuffleArray(products).slice(0, 5);
+                    }
+
+                    if (displayProducts.length === 0) {
+                        productList.innerHTML = '<p>No products available</p>';
+                        return;
+                    }
+
+                    productList.innerHTML = displayProducts.map(product => `
+                        <div class="product-item">
+                            <div class="product-select">
+                                <input type="checkbox" value="${product.id}" />
+                            </div>
+                            <div class="product-info">
+                                <strong>${product.base_title}</strong> (${product.sku})<br>
+                                Price: ${formatPrice(product.prices[0])}
+                            </div>
+                            <div class="product-actions">
+                                <button class="delete-btn" onclick="deleteProduct('${product.id}')">Delete</button>
+                            </div>
+                        </div>
+                    `).join('');
+                })
+                .catch(error => {
+                    console.error('Error fetching products:', error);
+                    document.getElementById('product-list').innerHTML =
+                        '<p style="color: red;">Error loading products</p>';
+                });
+        }
+
+        function deleteProduct(id) {
+            if (confirm('Are you sure you want to delete this product?')) {
+                fetch(`http://localhost:8080/products/${id}`, {
+                    method: 'DELETE'
+                })
+                    .then(response => {
+                        if (response.ok) {
+                            console.log('Product deleted successfully');
+                            refreshProducts(); // Refresh the list after deletion
+                        } else {
+                            throw new Error('Failed to delete product');
+                        }
+                    })
+                    .catch(error => console.error('Error:', error));
+            }
+        }
+
+        function formatPrice(price) {
+            if (!price) return 'N/A';
+            return `${price.amount} ${price.currency}`;
+        }
+
+        function shuffleArray(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+            return array;
+        }
+
+        // Initial product load
+        refreshProducts();
+
+        // Refresh products periodically (every 30 seconds)
+        setInterval(refreshProducts, 30000);
+
+        // Batch operations
+        function batchCreateProducts(count) {
+            const products = [];
+            for (let i = 0; i < count; i++) {
+                products.push({
+                    "sku": "BATCH-" + Math.random().toString(36).substring(7),
+                    "base_title": `Batch Product ${i + 1}`,
+                    "description": "Batch created product",
+                    "prices": [
+                        {
+                            "currency": "SEK",
+                            "amount": 199.00 + (i * 100)
+                        }
+                    ],
+                    "metadata": [
+                        {
+                            "market": "SE",
+                            "title": `Batch Product ${i + 1}`,
+                            "description": "Batch created product"
+                        }
+                    ]
+                });
+            }
+
+            fetch('http://localhost:8080/products/batch', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(products)
+            })
+                .then(response => response.json())
+                .then(results => {
+                    console.log('Batch creation results:', results);
+                    displayBatchResults('Created', results);
+                    refreshProducts();
+                })
+                .catch(error => console.error('Error in batch creation:', error));
+        }
+
+        function batchDeleteSelected() {
+            const selectedIds = getSelectedProductIds();
+            if (selectedIds.length === 0) {
+                alert('Please select products to delete');
+                return;
+            }
+
+            if (confirm(`Are you sure you want to delete ${selectedIds.length} products?`)) {
+                fetch('http://localhost:8080/products/batch', {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(selectedIds)
+                })
+                    .then(response => response.json())
+                    .then(results => {
+                        console.log('Batch deletion results:', results);
+                        displayBatchResults('Deleted', results);
+                        refreshProducts();
+                    })
+                    .catch(error => console.error('Error in batch deletion:', error));
+            }
+        }
+
+        function displayBatchResults(operation, results) {
+            const resultsDiv = document.getElementById('batch-results');
+            const successful = results.filter(r => r.success).length;
+            const failed = results.filter(r => !r.success).length;
+
+            resultsDiv.innerHTML = `
+                <div class="batch-summary">
+                    <h3>${operation} ${successful + failed} items</h3>
+                    <p>Successful: ${successful}</p>
+                    <p>Failed: ${failed}</p>
+                    ${failed > 0 ? '<h4>Errors:</h4>' : ''}
+                    ${results.filter(r => !r.success)
+                    .map(r => `<p class="error">${r.id}: ${r.error}</p>`)
+                    .join('')}
+                </div>
+            `;
+        }
+
+        function getSelectedProductIds() {
+            const checkboxes = document.querySelectorAll('#product-list input[type="checkbox"]:checked');
+            return Array.from(checkboxes).map(cb => cb.value);
         }
     </script>
 </body>
