--- a/test/websocket.html
+++ b/test/websocket.html
@@ -115,6 +115,32 @@
             color: #dc3545;
             margin: 5px 0;
         }
+
+        .control-panel {
+            margin: 20px 0;
+            padding: 15px;
+            background: #f5f5f5;
+            border-radius: 5px;
+        }
+
+        .generator-controls {
+            display: flex;
+            gap: 10px;
+            margin-top: 10px;
+        }
+
+        .generator-controls button {
+            padding: 8px 16px;
+            background: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .generator-controls button:hover {
+            background: #45a049;
+        }
     </style>
 </head>
 
@@ -148,6 +174,16 @@
         <button onclick="batchCreateProducts(5)">Create 5 Products</button>
         <button onclick="batchDeleteSelected()">Delete Selected</button>
         <div id="batch-results" class="batch-results"></div>
+    </div>
+
+    <div class="control-panel">
+        <h3>Testdata Generator</h3>
+        <div class="generator-controls">
+            <button onclick="generateProducts(1)">Generera 1 produkt</button>
+            <button onclick="generateProducts(5)">Generera 5 produkter</button>
+            <button onclick="generateProducts(20)">Generera 20 produkter</button>
+            <button onclick="generateRandomBatch()">Generera slumpmässigt antal</button>
+        </div>
     </div>
 
     <script>
@@ -417,6 +453,49 @@
         function getSelectedProductIds() {
             const checkboxes = document.querySelectorAll('#product-list input[type="checkbox"]:checked');
             return Array.from(checkboxes).map(cb => cb.value);
+        }
+
+        function generateRandomProduct() {
+            const markets = ['SE', 'NO', 'DK', 'FI'];
+            const currencies = ['SEK', 'NOK', 'DKK', 'EUR'];
+
+            return {
+                "sku": "TEST-" + Math.random().toString(36).substring(7).toUpperCase(),
+                "base_title": "Testprodukt " + Math.floor(Math.random() * 1000),
+                "description": "Automatiskt genererad testprodukt",
+                "prices": currencies.map(currency => ({
+                    "currency": currency,
+                    "amount": Math.floor(Math.random() * 9900) + 100
+                })),
+                "metadata": markets.map(market => ({
+                    "market": market,
+                    "title": `Testprodukt för ${market}`,
+                    "description": `Testbeskrivning för marknad ${market}`
+                }))
+            };
+        }
+
+        function generateProducts(count) {
+            const products = Array(count).fill().map(() => generateRandomProduct());
+
+            fetch('http://localhost:8080/products/batch', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(products)
+            })
+                .then(response => response.json())
+                .then(data => {
+                    console.log(`Genererade ${count} produkter:`, data);
+                    refreshProducts(); // Uppdatera produktlistan
+                })
+                .catch(error => console.error('Fel vid generering:', error));
+        }
+
+        function generateRandomBatch() {
+            const count = Math.floor(Math.random() * 46) + 5; // 5-50 produkter
+            generateProducts(count);
         }
     </script>
 </body>
